syntax = "proto3";

option csharp_namespace = "ITI.GRPC.Server.Protos";

service InventoryService {
    rpc GetProductById (ProductRequest) returns (ProductResponse);
    rpc AddProduct (Product) returns (ProductResponse);
    rpc UpdateProduct (Product) returns (ProductResponse);
}

message ProductRequest {
    int32 id = 1;
}

message ProductResponse {
    bool exists = 1;
    Product product = 2;
}

message Product {
    int32 id = 1;
    string name = 2;
    int32 quantity = 3;
    double price = 4;
}
